# gfx-project

./: .gitignore  CMakeLists.txt  README.md  graphics.hpp  main.cpp  system.hpp
docs/: Makefile  main.tex  new.txt
docs/system/: Makefile  files.txt  main.tex  note
docs/system/sections/: box.tex  callbacks.tex  clock.tex  color.tex  debug.tex  interpolators.tex  intro.tex  vectors.tex
docs/system/sections/helpers/: main  main.cpp
graphics/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  polygon.cpp  polygon.hpp  polygon.inl  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex.cpp  vertex.hpp  view.cpp  view.hpp
shaders/: 3d_tex.frag  3d_tex.vert  3d_tex_color.frag  3d_tex_color.vert  shader3d.frag  shader3d.vert
system/: box.cpp  box.hpp  callbacks.cpp  callbacks.hpp  clock.cpp  clock.hpp  color.cpp  color.hpp  debug.cpp  debug.hpp  interpolators.cpp  interpolators.hpp  task.cpp  task.hpp  task.inl  task_queue.cpp  task_queue.hpp  task_queue.inl  vectors.cpp  vectors.hpp
